2024-12-14T01:49:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12325797319 # 708
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-14
* notice: last 14d: unq all: 4 7
* notice: prev accum: outdated-unq outdated-all / unq all: 3804 8372 / 3809 8377
* notice: next accum: outdated-unq outdated-all / unq all: 3804 8372 / 3810 8379
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-12-13]

2024-12-12T12:48:41Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12296738717 # 705
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-12
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 3804 8372 / 3808 8376
* notice: next accum: outdated-unq outdated-all / unq all: 3804 8372 / 3809 8377
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-12-12]

2024-12-12T01:53:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12288332688 # 704
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-12
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 3803 8371 / 3808 8376
* notice: next accum: outdated-unq outdated-all / unq all: 3804 8372 / 3808 8376
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-28] / []

2024-12-10T12:49:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12256449406 # 701