@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-12-14T01:49:33Z",
-  "count_outdated" : 8372,
-  "uniques_outdated" : 3804,
-  "count" : 8379,
-  "uniques" : 3810,
+  "timestamp" : "2024-12-15T12:42:48Z",
+  "count_outdated" : 8373,
+  "uniques_outdated" : 3805,
+  "count" : 8380,
+  "uniques" : 3811,
   "clones" : [
-    {
-      "timestamp": "2024-12-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-12-02T00:00:00Z",
       "count": 1,
@@ -55,6 +46,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
