@@ -1,12 +1,7 @@
 {
   "count": 7,
-  "uniques": 4,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2024-12-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-12-02T00:00:00Z",
       "count": 1,
@@ -30,6 +25,11 @@
     {
       "timestamp": "2024-12-13T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-12-15T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
