@@ -1,3 +1,12 @@
+2024-12-15T12:42:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12338881958 # 711
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-15
+* notice: last 14d: unq all: 5 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 3804 8372 / 3810 8379
+* notice: next accum: outdated-unq outdated-all / unq all: 3805 8373 / 3811 8380
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-12-01] / [2024-12-15]
+
 2024-12-14T01:49:33Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12325797319 # 708
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-14
